# hr-replacer

./: README.md  pyproject.toml
data/: questions.json
src/: backend.py
src/templates/: index.html
