[tool.poetry]
name = "hr-replacer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
openai = "^1.40.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
